--- a/ApiRest-ShoppingCart/ApiRest-ShoppingCart/ApiRest-ShoppingCart.csproj
+++ b/ApiRest-ShoppingCart/ApiRest-ShoppingCart/ApiRest-ShoppingCart.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Entidades\Cliente.cs" />
+    <Compile Include="Entidades\Excepcion.cs" />
     <Compile Include="Entidades\LoginValidate.cs" />
     <Compile Include="Entidades\TokenSecurity.cs" />
     <Compile Include="Global.asax.cs">
