Se agregó el metodo para enviar correos desde el webServices

--- a/ApiRest-ShoppingCart/ApiRest-ShoppingCart/ApiRest-ShoppingCart.csproj
+++ b/ApiRest-ShoppingCart/ApiRest-ShoppingCart/ApiRest-ShoppingCart.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Models\DataCliente.cs" />
     <Compile Include="Models\Funciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WsEmail\WsEmail.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
